RESOLVED FIXED58776
Web Inspector: Database agent stops to propagate it's events after navigation.
https://bugs.webkit.org/show_bug.cgi?id=58776
Summary Web Inspector: Database agent stops to propagate it's events after navigation.
Ilya Tikhonovsky
Reported 2011-04-18 04:32:31 PDT
%subj%
Attachments
[patch] initial version (6.44 KB, patch)
2011-04-18 04:41 PDT, Ilya Tikhonovsky
no flags
[patch] initial version. with changelog. (6.48 KB, patch)
2011-04-18 05:10 PDT, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2011-04-18 04:41:45 PDT
Created attachment 90016 [details] [patch] initial version
WebKit Review Bot
Comment 2 2011-04-18 04:44:56 PDT
Attachment 90016 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ilya Tikhonovsky
Comment 3 2011-04-18 05:10:38 PDT
Created attachment 90020 [details] [patch] initial version. with changelog.
Yury Semikhatsky
Comment 4 2011-04-18 05:17:26 PDT
Comment on attachment 90020 [details] [patch] initial version. with changelog. View in context: https://bugs.webkit.org/attachment.cgi?id=90020&action=review > Source/WebCore/inspector/InspectorDatabaseAgent.cpp:267 > m_enabled = false; Please call disable() instead.
Ilya Tikhonovsky
Comment 5 2011-04-18 05:26:14 PDT
Note You need to log in before you can comment on or make changes to this bug.