2011-04-18  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: Database agent stops to propagate it's events after navigation.
        https://bugs.webkit.org/show_bug.cgi?id=58776

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::InspectorAgent):
        (WebCore::InspectorAgent::restoreInspectorStateFromCookie):
        * inspector/InspectorDatabaseAgent.cpp:
        (WebCore::InspectorDatabaseAgent::InspectorDatabaseAgent):
        (WebCore::InspectorDatabaseAgent::clearFrontend):
        (WebCore::InspectorDatabaseAgent::enable):
        (WebCore::InspectorDatabaseAgent::disable):
        (WebCore::InspectorDatabaseAgent::restore):
        * inspector/InspectorDatabaseAgent.h:
        (WebCore::InspectorDatabaseAgent::create):

Canonical link: https://commits.webkit.org/73875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84134 268f45cc-cd09-0410-ab3c-d52691b4dbfc